# mini-os

./: Cargo.toml  README.md  x86_64-mini-os.json
.cargo/: config.toml
.github/workflows/: ci.yml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  ramdisk.rs  serial.rs  shell.rs  syscall.rs  user.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
