[package]
name = "mini-os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort" # comments work

[profile.release]

[[bin]]
name = "mini-os"
test = true
bench = false
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]